(library
 (foreign_stubs
  (language c)
  (names ppx_expect_runtime_stubs))
 (name ppx_expect_nobase_runtime)
 (public_name ppx_expect_nobase.runtime)
 (libraries
  ppx_inline_test_nobase.runtime-lib
  make_corrected_file
  expect_test_nobase_config)
 (js_of_ocaml
  (javascript_files runtime.js))
 (preprocess no_preprocessing))
